@startuml

title __MODELS's Class Diagram__\n

    class fr.projava.triangle.Models.MThread {
        + successSend : boolean
        - connection : boolean
        - message : String
        - type : String
        + MThread()
        + MThread()
        + MThread()
        + MThread()
        + run()
        - createOnlineUser()
    }

    class fr.projava.triangle.Models.Message {
        - message : String
        - sender : boolean
        - sent_at : Date
        + Message()
        + Message()
        + getMessage()
        + getSent_at()
        + isSender()
    }


    class fr.projava.triangle.Models.User {
        - connected : boolean
        - contactBook : ArrayList<User>
        - id : String
        - ipInetAddress : InetAddress
        - port : int
        - pseudo : String
        + User()
        + User()
        + addUserToContactBook()
        + changePseudoByAddress()
        + checkChangedPseudo()
        + checkValidPseudo()
        + existingAddress()
        + findByAddress()
        + getContactBook()
        + getId()
        + getIpInetAddress()
        + getPort()
        + getPseudo()
        + isConnected()
        + removeUserFromContactBook()
        + setId()
        + setIpInetAddress()
        + setPort()
        + setPseudo()
        + showConnectedUsers()
    }


  fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : receiver
  fr.projava.triangle.Models.MThread o-- fr.projava.triangle.Models.User : sender


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
